Fixing style button form and type of quantity field

--- a/challenge-angular-app/src/app/pages/produtos/produto-form/produto-form.component.scss
+++ b/challenge-angular-app/src/app/pages/produtos/produto-form/produto-form.component.scss
@@ -24,6 +24,8 @@
   flex-direction: column;
 }
 
-.save-button {
-  width: fit-content;
+.form-action {
+  margin-top: 15px;
+  display: flex;
+  justify-content: flex-end;
 }
